# data-warehouse-practice

./: .gitignore  README.md  pyproject.toml  requirements.txt  tmp-terminal.txt
.streamlit/: secrets.toml
notebooks/: 01-sales-analysis.ipynb  gemini-prompt.md  visualisation-plan.md
notebooks/.ipynb_checkpoints/: 01-sales-analysis-checkpoint.ipynb
sql-data-analytics-project/scripts/: 00_init_database.pgsql.sql  01_database_exploration.pgsql.sql  02_dimensions_exploration.pgsql.sql  03_date_range_exploration.pgsql.sql  04_measures_exploration.pgsql.sql  06_ranking_analysis.pgsql.sql  07_change_over_time_analysis.pgsql.sql  08_cumulative_analysis.pgsql.sql  09_performance_analysis.pgsql.sql  10_data_segmentation.pgsql.sql  11_part_to_whole_analysis.pgsql.sql  12_report_customers.pgsql.sql  13_report_products.pgsql.sql
sql_data_wharehouse/: README.md
sql_data_wharehouse/docs/: assignments.md  business-questions.md  data-story.md  instruction-1.md  instruction-2.md  instruction-3.md  instruction-5.md  instruction-6.md  instruction-7.md  instruction-dbeaver-setup.md  project-plan.md  tmp-sql.txt
sql_data_wharehouse/scripts/: init_database.pgsql.sql
sql_data_wharehouse/scripts/bronze/: ddl_bronze.pgsql.sql  ddl_bronze.sql  proc_load_bronze.pgsql.sql  proc_load_bronze.sql
sql_data_wharehouse/scripts/gold/: ddl_gold.pgsql.sql
sql_data_wharehouse/scripts/silver/: ddl_silver.pgsql.sql  proc_load_silver.pgsql.sql
streamlit_apps/sales_dashboard/: app.py
