[project]
name = "sql"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "psycopg2-binary>=2.9.10",
    "seaborn>=0.13.2",
    "streamlit>=1.50.0",
    "SQLAlchemy>=2.0.34",
]
